AUTOMAKE_OPTIONS = gnu

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib main data po tools

installdir = $(LIBDIR)/enigma2/python

install_PYTHON = \
	Navigation.py NavigationInstance.py RecordTimer.py SleepTimer.py ServiceReference.py \
	keyids.py keymapparser.py mytest.py skin.py timer.py tools.py GlobalActions.py \
	e2reactor.py
