AC_INIT(tuxbox-apps-misc-tools,0.0.1,,tuxbox-misc-tools)
AM_INIT_AUTOMAKE(tuxbox-misc-tools,0.0.1)

TUXBOX_APPS

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_OUTPUT([
Makefile
devinit/Makefile
evremote2/Makefile
libdreamdvd/Makefile
libdreamdvd/libdreamdvd.pc
libeplayer2/Makefile
fp_control/Makefile
showiframe/Makefile
stfbcontrol/Makefile
streamproxy/Makefile
ustslave/Makefile
tffpctl/Makefile
tfd2mtd/Makefile
hotplug/Makefile
libcoolstream/Makefile
])
