bin_PROGRAMS = evremote2 evtest

evremote2_SOURCES = evremote.c global.c remotes.c Ufs910_1W.c \
Ufs910_14W.c Tf7700.c Hl101.c Vip2.c Ufs912.c Spark.c Ufs922.c Ufc960.c HDBOX.c Homecast5101.c Cuberevo.c Adb_Box.c Ipbox.c VitaminHD5000.c Cnbox.c
AM_CFLAGS = -Wall
AM_LDFLAGS = -lrt -lpthread

evtest_SOURCES = evtest.c
