install-data-local:
	install -d $(datadir)/neutrino/httpd-y/images
	install -m 0644 *.gif $(datadir)/neutrino/httpd-y/images
	install -m 0644 *.png $(datadir)/neutrino/httpd-y/images
	install -m 0644 *.jpg $(datadir)/neutrino/httpd-y/images

uninstall-local:
	-rm -rf $(datadir)/neutrino/httpd-y/images
